Version 1.20.5 - Jul. 19, 2016
Check permission before selectively deleting a message.

Version 1.20.4 - Jul. 12, 2016
Third attempt to fix the same bug

Version 1.20.3 - Jul. 10, 2016
Yesterdays bugfix broke more than it fixed, refixed.

Version 1.20.2 - Jul. 9, 2016
Fix bug preventing to send PMs to number-only nicknames

Version 1.20.1 - Jun. 13, 2016
Bugfix when logging guests out via admin section
Don't hide image embedding option in profile with cookies disabled
Making a moderator to member now sets incognito back to disabled

Version 1.20 - May 15, 2016
Add setting in profile to allow offline inbox for: staff, members or everyone
Completely fix link-redirection

Version 1.19.2 - May 7, 2016
Remove JavaScript "load only new messages" feature
Add JS auto-refresh to header instead

Version 1.19.1 - May 1, 2016
Fix parts of the offline inbox

Version 1.19 - Apr. 29, 2016
Add an offline inbox for members
Allow deletion of member accounts in profile

Version 1.18 - Apr. 28, 2016
Add time zone settings
Combine Password reset and setting new nickname
Add useful error message on failed login

Version 1.17 - Apr. 20, 2016
Make nocache refresh hack configurable in profile
Add disable PM option
Allow disabling the chat completely

Version 1.16.4 - Apr. 15, 2016
Properly escape some parameters
Add caching hack for aggressively caching browsers (e.g. links)
Improve invalid filter handling + allow new line match with \n
Fix a few forms to be used cookie-less

Version 1.16.3 - Apr. 14, 2016
Fix warning on redirection of links without a scheme

Version 1.16.2 - Apr. 14, 2016
Add CSS classes and move more css to the database
Allow extreme captcha to be solved in both directions

Version 1.16.1 - Apr. 13, 2016
Fixed a typo

Version 1.16 - Apr. 13, 2016
Use constants for configuration
Simplify extreme captcha code generation
Add language setting to profile
Add checks for required extensions
Move some more settings to the database
Add CSS to limit list of chatters hight